--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Etch a Sketch</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
+    
 </head>
 <body>
     <div id="page-grid">
