Added event listeners to each cell and added reset button

--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <title>Etch a Sketch</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div id="page-grid">
+        <div id="header">
+            <h1>Etch-a-Sketch</h1>
+            <button>Reset</button>
+        </div>
+        <div id="sketch-grid">
+        </div>
     </div>
+    
 </body>
+
 </html>
